NIFI-14663: Fixed threading issue in which ProcessorNode.isRunning() can return false before shutdown lifecycle methods have been run Fixed bug in System Test, in which test was not waiting for Controller Service to become valid before starting Processor that references it. Also fixed a typo in NiFiClientUtil in which waitForControllerServicesEnabled was misspelled as waitForControllerSerivcesEnabled